--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,8 @@
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
 	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	 xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-	 version="3.1">
+	 version="3.1"
+         metadata-complete="false"><!--預設false true禁止使用@配置Servlet 以Web.xml為主-->
     <session-config>
         <session-timeout>
             30
